Keep the structure of Gabor filter while updating the weights

--- a/scripts/How to update.ipynb
+++ b/scripts/How to update.ipynb
@@ -2,9 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -12,6 +14,7 @@
     "from theano import tensor\n",
     "import theano\n",
     "from theano import pp\n",
+    "import random\n",
     "import numpy as np"
    ]
   },
@@ -19,7 +22,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -34,7 +39,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -96,7 +103,9 @@
     "        sigma = random.uniform(0.0001,2)\n",
     "        theta = random.uniform(0,2*math.pi)    \n",
     "        psi = random.uniform(0.0001,2)\n",
-    "\n",
+    "        \n",
+    "        params = [f, gamma, sigma, theta, psi]\n",
+    "        \n",
     "        bond = math.floor(size/2)\n",
     "        x_range = np.linspace(-bond, bond, size)\n",
     "        y_range = np.linspace(-bond, bond, size)\n",
@@ -108,7 +117,7 @@
     "            gfilter.append(value.real)\n",
     "        \n",
     "        W = np.array(gfilter)\n",
-    "        Ws = np.concatenate((Ws,w),axis=1)\n",
+    "        Ws = np.concatenate((Ws,W),axis=1)\n",
     "    Ws = Ws.reshape(shape)\n",
     "    return Ws\n",
     "\n",
@@ -130,7 +139,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -161,7 +172,9 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -187,7 +200,9 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
