debug: how to update

--- a/scripts/How to update.ipynb
+++ b/scripts/How to update.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -15,7 +15,8 @@
     "import theano\n",
     "from theano import pp\n",
     "import random\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import cmath"
    ]
   },
   {
@@ -37,24 +38,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "36"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# I know the 5 parameters in list variable params\n",
     "def garbor_filter(x,y,params):\n",
@@ -62,11 +52,19 @@
     "    xt = x*math.cos(theta) + y*math.sin(theta)\n",
     "    yt = -x*math.sin(theta) + y*math.cos(theta)\n",
     "    z1 = -(xt**2 + (gamma*yt)**2)/(2*sigma**2)\n",
-    "    z2 = 1j*2*math.pi*f*xt+psi\n",
-    "    value = f**2/(math.pi*gamma)*math.exp(z1)*cmath.exp(z2)\n",
+    "    z2 = 2*math.pi*f*xt+psi\n",
+    "    value = f**2/(math.pi*gamma)*math.exp(z1)*math.sin(z2)\n",
     "    return value\n",
     "\n",
-    "value = garbor_filter(x,y,f,gamma,sigma,theta,psi)\n",
+    "def garbor_filter_2(x,y,params):\n",
+    "    f,gamma,sigma,theta,psi = params\n",
+    "    xt = x*math.cos(theta) + y*math.sin(theta)\n",
+    "    yt = -x*math.sin(theta) + y*math.cos(theta)\n",
+    "    z1 = -(xt**2 + (gamma*yt)**2)/(2*sigma**2)\n",
+    "    z2 = 1j*2*math.pi*f*xt+psi\n",
+    "    value = math.exp(z1)*cmath.exp(z2)\n",
+    "    return value\n",
+    "\n",
     "\n",
     "def g_theta(x,y,params):\n",
     "    f,gamma,sigma,theta,psi = params\n",
@@ -198,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -206,19 +204,27 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.02978250286684668\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "array([1, 2, 3])"
+       "(-0.7365503871094661+0.6763826781112121j)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lis = [1,2,3]\n",
-    "np.array(lis)"
+    "params = [1,1,1,1,1]\n",
+    "print(garbor_filter(1,1,params))\n",
+    "garbor_filter_2(1,1,params)"
    ]
   }
  ],
