Update gradient descent

--- a/scripts/Test GPU.ipynb
+++ b/scripts/Test GPU.ipynb
@@ -1363,23 +1363,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5605194792074395"
+       "Elemwise{sin,no_inplace}.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import random\n",
-    "random.uniform(0,2)"
+    "import theano\n",
+    "theano.tensor.sin(1)"
    ]
   }
  ],
