--- a/scripts/Test GPU.ipynb
+++ b/scripts/Test GPU.ipynb
@@ -71,6 +71,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "import numpy as np\n",
+    "def g_psi(x,y,params):\n",
+    "    f,gamma,sigma,theta,psi = params\n",
+    "    xt = x*np.cos(theta) + y*np.sin(theta)\n",
+    "    yt = -x*np.sin(theta) + y*np.cos(theta)\n",
+    "    z1 = -(xt**2 + (gamma*yt)**2)/(2*sigma**2)\n",
+    "    z2 = 2*math.pi*f*xt+psi\n",
+    "    value = -1*f**2/(math.pi*gamma)*np.exp(z1)*np.sin(z2)\n",
+    "    return value\n",
+    "\n",
+    "size = 5\n",
+    "bond = math.floor(size/2)\n",
+    "params = [1,1,1,1,1]\n",
+    "x_range = np.linspace(-bond, bond, size)\n",
+    "y_range = np.linspace(-bond, bond, size)\n",
+    "xt,yt = np.meshgrid(x_range,y_range)\n",
+    "a = g_psi(xt,yt,params)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.0010340380110751238"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true,
@@ -1119,7 +1169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
